# Aeon-AI

./: .env.example  .env.template  .gitignore  HUGGINGFACE_AUTH.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  README.md  podman-compose.yml  pyproject.toml  workspace.dsl
.claude/: project-overview.md
diagrams/: README.md  structurizr-APIComponents.mmd  structurizr-AgentComponents.mmd  structurizr-Containers.mmd  structurizr-Deployment.mmd  structurizr-HostServices.mmd  structurizr-K3sServices.mmd  structurizr-SystemContext.mmd
docs/: PODMAN_MIGRATION.md
inference/: Dockerfile.embeddings  README.md  docker-compose.yml  embedding_server.py  pyproject.toml  requirements.txt  start_vllm.sh  stop_vllm.sh
k8s/: README.md
k8s/app/: api-backend.yaml  ui-frontend.yaml
k8s/base/: code-execution-rbac.yaml  monitoring.yaml  namespace.yaml  postgres.yaml  qdrant.yaml  redis.yaml  searxng.yaml
k8s/jobs/: nightly-optimization.yaml  nightly-optimize.yaml
scripts/: README.md  build.sh  cleanup.sh  configure-podman-registries.sh  dev-setup.sh  install-podman.sh  podman-services.sh  setup.sh  start-host-services.sh
services/: Dockerfile  pyproject.toml  requirements.txt
services/agent/: __init__.py  agent.py  tools.py
services/analytics/: __init__.py  aggregator.py  finetuning.py  jobs.py  optimizer.py  schema.sql  tracker.py
services/api/: __init__.py  main.py
services/code_exec/: __init__.py  executor.py  validator.py
services/rag/: __init__.py  analytics.py  chunking.py  retrieval.py  vector_store.py
training/: README.md  config.yaml  evaluate.py  monitor_gpu.py  prepare_dataset.py  requirements.txt  run_all.sh  test_inference.py  train_tool_aware.py
ui/: .eslintrc.json  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
ui/src/: App.css  App.tsx  index.css
